--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "lottie-react-native": "^7.3.5",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-dropdown-picker": "^5.4.6",
