--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-mmkv": "^4.1.1",
+    "react-native-nitro-modules": "^0.33.2",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0"
