--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^8.2.1",
     "react-native-mmkv": "^4.1.1",
     "react-native-nitro-modules": "^0.33.2",
     "react-native-safe-area-context": "^5.6.2",
@@ -28,9 +29,9 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native-community/cli": "^14.0.1",
+    "@react-native-community/cli-platform-android": "^15.1.0",
+    "@react-native-community/cli-platform-ios": "^14.0.1",
     "@react-native/babel-preset": "0.82.1",
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
